--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,8 @@ body{
 	background-color:white;
 }
 
+/*------Media Column------*/
+
 @media (main-width: 768px) {
     html {
         font-size: 16px;
@@ -23,9 +25,13 @@ body{
     }
 }
 
+/*------Container Column------*/
+
 .container{
     max-width: 960px;
 }
+
+/*------Team Column------*/
 
 .team{
     overflow-x: scroll;
@@ -33,6 +39,8 @@ body{
     white-space: nowrap;
     margin-bottom: 2rem;
 }
+
+/*------Card-Deck Column------*/
 
 .card-deck .card{
     min-width: 280px;
